--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{"homepage": "https://yashrxx.github.io/cream-dream-cakeshop",
   "name": "vite_react_shadcn_ts",
   "private": true,
   "version": "0.0.0",
